fixed img not showing up on github pages

--- a/src/index.css
+++ b/src/index.css
@@ -1212,6 +1212,13 @@ button{
   .db__section{
     margin: 24px 0;
   }
+  .team__card-wrapper{
+    flex-direction: column;
+  }
+  .team-card{
+    flex: 1;
+    width: 100%;
+  }
 }
 @media screen and (max-width: 576px){
   :root{
